Crud for mongodb

--- a/.env
+++ b/.env
@@ -1,2 +1,1 @@
-sas123sslkk990
-DATABASE_URL="postgresql://postgres.dzgagxvppqcntczkyrqp:sas123sslkk990@aws-0-ap-south-1.pooler.supabase.com:5432/postgres"
+mongoUrl="mongodb+srv://test:boond@cluster0.4y4rngu.mongodb.net/Analytic"
